--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-776.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-289.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-954.9KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-224.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇺🇸 美国-333.7KB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1003, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
-  - {name: 🇯🇵 日本-1.42MB/s(Youtube:不良林), server: 152.69.193.245, port: 80, type: vmess, uuid: 6697776b-d009-413b-8708-822ee2e02515, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.193.245}}
-  - {name: 🇺🇸 美国-900.2KB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 🇺🇸 美国-518.5KB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-406.4KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇺🇸 美国-875.9KB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
+  - {name: 🇦🇺 澳大利亚-386.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇺🇸 美国-309.6KB/s(Youtube:不良林), server: 38.143.66.87, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: us03.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: us03.gogogoo.cyou}}
+  - {name: 🇺🇸 美国-3.29MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇺🇸 美国-2.50MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇦 加拿大-566.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-386.8KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-566.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-386.8KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-566.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-386.8KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-566.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-386.8KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-566.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-386.8KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-566.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-386.8KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-566.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-776.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-289.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-954.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-900.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-518.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-386.8KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-566.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
