--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.28MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 43184, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活1天)中国-3.47MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇻🇳 越南-5.06MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.00MB/s(Youtube:不良林), server: 38.143.66.87, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇻🇳 越南-5.68MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-316.6KB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
-  - {name: 🇩🇪 德国-1023.5KB/s(Youtube:不良林), server: tt1.tjvpn.top, port: 2022, type: trojan, password: 0cb2cd1f-870b-485c-914a-60aba39eed39, sni: tt1.tjvpn.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇨🇳 中国-361.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 未知国家-1.67MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
   - {name: 🇨🇳 中国-558.0KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 未知国家-165.3KB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
+  - {name: 🇬🇧 英国-899.5KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-1.07MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇨🇳 中国-457.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-470.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-308.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-316.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1023.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
+      - 未知国家-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 未知国家-165.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-899.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-316.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1023.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
+      - 未知国家-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 未知国家-165.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-899.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-316.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1023.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
+      - 未知国家-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 未知国家-165.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-899.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-316.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1023.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
+      - 未知国家-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 未知国家-165.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-899.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-316.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1023.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
+      - 未知国家-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 未知国家-165.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-899.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-316.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1023.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
+      - 未知国家-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 未知国家-165.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-899.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.47MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.00MB/s(Youtube:不良林)
-      - 🇻🇳 越南-5.68MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-316.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1023.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.4KB/s(Youtube:不良林)
+      - 未知国家-1.67MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 未知国家-165.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-899.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-457.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
